JCLAW-129: thread and object creation cleanup (7 items)
Bundle of seven audit findings landing as one PR. None are data-corruption
bugs — the biggest real cost was two ScheduledExecutorService singletons
leaking carriers across dev hot reloads, plus a handful of object-churn
and lifecycle hygiene issues.

Items: (1) SkillPromotionService drops the throwaway Gson intermediary.
(2) TelegramPollingRunner's cooldown-reconcile scheduler now uses a
virtual-thread factory. (3, 4, 6) Added lifecycle shutdown hooks for the
three static ScheduledExecutorService singletons across TelegramPollingRunner,
TelegramStreamingSink, and ApiChatController, wired into ShutdownJob's
@OnApplicationStop handler. The latter two use AtomicReference lazy re-init
so JobLifecycleTest's mid-suite ShutdownJob.doJob() call doesn't leave the
singletons dead for downstream tests. (5) LoadTestRunner internal login
reuses HttpClients.GENERAL instead of constructing a per-call HttpClient.
(7) FileSystemTools.applySingleEdit now accepts a per-batch regex cache so
repeated oldText patterns don't recompile within one editFile call.

Helpers: new utils.VirtualThreads.gracefulShutdown(executor, name) DRYs the
5-second drain-or-force pattern across the three shutdown call sites.
ApiChatController.shutdown() carries @play.mvc.Util so ControllersEnhancer
doesn't try to instrument it as an HTTP action.

Tests: new VirtualThreadsTest covers the gracefulShutdown helper (idle
drain, in-flight task wait, already-shutdown no-op, plain ExecutorService
compatibility). Full backend suite passes (62 classes). pnpm test green
at 281/281.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>